# deep-research-llama-cloud-agents

./: .gitignore  README.md  main.py  pyproject.toml
configs/: config.json
debug/: main.py
docs/: deep-research-ui.md  deep-research-workflows.md
src/deep_research/: __init__.py  clients.py  config.py  events.py  function_agent_workflow.py  llm.py  research_metadata_workflow.py  research_plan_workflow.py  schemas.py  utils.py
src/deep_research/services/: __init__.py  content_analysis_service.py  document_parser_service.py  evidence_service.py  file_service.py  models.py  patch_prompts.py  prompts.py  query_service.py  report_patch_service.py  research_llm_service.py  token_counting_service.py  trafilatura_document_parser_service.py  web_search_service.py
src/deep_research/tools/: __init__.py  demo_tools.py  mock_tools.py
src/deep_research/workflows/planner/: __init__.py  events.py  models.py  planner_workflow.py  prompts.py  utils.py  workflow.py
src/deep_research/workflows/research/: prompts.py  research_workflow.py  state.py  state_keys.py
src/deep_research/workflows/research/orchestrator/: agent.py  customs.py  prompts.py  tools.py
src/deep_research/workflows/research/reviewer/: agent.py
src/deep_research/workflows/research/searcher/: agent.py  models.py  prompts.py  tools.py
src/deep_research/workflows/research/tools/: research_tools.py
src/deep_research/workflows/research/writer/: agent.py  customs.py  models.py  prompts.py  tools.py
src/extraction_review/: config.py  metadata_workflow.py  process_file.py
tests/fixtures/orchestrator_cases/: batteries_seed.json  doj_news_seed.json  tesla_pdf_seed.json  tokyo_weather_seed.json
tests/integration/: conftest.py
tests/integration/orchestrator/: test_orchestrator_judged.py
tests/integration/searcher/: test_searcher_judged_integrations.py  test_searcher_runner_integration.py
tests/integration/writer/: test_writer_judged.py
tests/manual_integration/: clean_run.py  orchestrator_runner.py  runner.py  searcher_runner.py  writer_runner.py
ui/: pnpm-lock.yaml
ui/src/: App.tsx  vite-env.d.ts
ui/src/features/research/: events.ts  types.ts  utils.ts
ui/src/features/research/components/: Artifacts.tsx  MarkdownPreview.tsx  PlanReviewer.tsx  PlannerRunner.tsx  RunLog.tsx  SessionHeader.tsx  StatusPill.tsx  Tabs.tsx
ui/src/features/research/components/tabs/: FilesTab.tsx  OverviewTab.tsx  ReportTab.tsx  SourcesTab.tsx
ui/src/features/research/hooks/: useMockResearchRun.ts
ui/src/features/research/mock/: sessions.ts  stream.ts
ui/src/lib/: AppProviders.tsx  ToolbarContext.tsx  client.ts  config.ts  export.ts  workflows.ts
ui/src/pages/: ResearchPage.tsx  ResearchSessionPage.tsx
